tests/baselines/reference/parserES5ForOfStatement6(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserES5ForOfStatement6.ts(1,17): error TS1188: Only a single variable declaration is allowed in a 'for...of' statement.
parserES5ForOfStatement6.ts(1,26): error TS2304: Cannot find name 'X'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserES5ForOfStatement6.ts (2 errors) ====
    for (var a = 1, b = 2 of X) {
                    ~
!!! error TS1188: Only a single variable declaration is allowed in a 'for...of' statement.
                             ~
!!! error TS2304: Cannot find name 'X'.
    }